xrpl-common-stdlib/tests/decoder/fail_tx_only_missing_from_ledger.stderr
error[E0277]: the trait bound `TxOnly: FromLedger` is not satisfied
  --> tests/decoder/fail_tx_only_missing_from_ledger.rs:22:28
   |
22 |     requires_from_ledger::<TxOnly>();
   |                            ^^^^^^ the trait `FromLedger` is not implemented for `TxOnly`
   |
note: required by a bound in `requires_from_ledger`
  --> tests/decoder/fail_tx_only_missing_from_ledger.rs:19:28
   |
19 | fn requires_from_ledger<T: FromLedger>() {}
   |                            ^^^^^^^^^^ required by this bound in `requires_from_ledger`
